@@ -216,9 +216,13 @@ int start_proxy(int proxy_type)
 		, port, type, auth);
 
 	fprintf(stderr, "starting delegated proxy on port %d (%s %s)...\n", port, type, auth);
-	int ret = system(buf);
-	fprintf(stderr, "launched (%d)\n", ret);
-	if (ret) return -1;
+	int r = system(buf);
+	if (r != 0)
+	{
+		fprintf(stderr, "failed (%d) %s\n", errno, strerror(errno));
+		exit(1);
+	}
+	fprintf(stderr, "launched\n");
 	// apparently delegate takes a while to open its listen port
 	test_sleep(500);
 	return port;
