@@ -110,9 +110,7 @@ int test_main()
 		error_code ec;
 		int ret = lazy_bdecode(b, b + sizeof(b)-1, e, ec);
 		TORRENT_ASSERT(ret == 0);
-#if TORRENT_USE_IOSTREAM
-		std::cout << e << std::endl;
-#endif
+		printf("%s\n", print_entry(e).c_str());
 		std::pair<const char*, int> section = e.data_section();
 		TORRENT_ASSERT(std::memcmp(b, section.first, section.second) == 0);
 		TORRENT_ASSERT(section.second == sizeof(b) - 1);
@@ -126,9 +124,7 @@ int test_main()
 		error_code ec;
 		int ret = lazy_bdecode(b, b + sizeof(b)-1, e, ec);
 		TORRENT_ASSERT(ret == 0);
-#if TORRENT_USE_IOSTREAM
-		std::cout << e << std::endl;
-#endif
+		printf("%s\n", print_entry(e).c_str());
 		std::pair<const char*, int> section = e.data_section();
 		TORRENT_ASSERT(std::memcmp(b, section.first, section.second) == 0);
 		TORRENT_ASSERT(section.second == sizeof(b) - 1);
@@ -143,9 +139,7 @@ int test_main()
 		error_code ec;
 		int ret = lazy_bdecode(b, b + sizeof(b)-1, e, ec);
 		TORRENT_ASSERT(ret == 0);
-#if TORRENT_USE_IOSTREAM
-		std::cout << e << std::endl;
-#endif
+		printf("%s\n", print_entry(e).c_str());
 		std::pair<const char*, int> section = e.data_section();
 		TORRENT_ASSERT(std::memcmp(b, section.first, section.second) == 0);
 		TORRENT_ASSERT(section.second == sizeof(b) - 1);
@@ -167,9 +161,7 @@ int test_main()
 		error_code ec;
 		int ret = lazy_bdecode(b, b + sizeof(b)-1, e, ec);
 		TORRENT_ASSERT(ret == 0);
-#if TORRENT_USE_IOSTREAM
-		std::cout << e << std::endl;
-#endif
+		printf("%s\n", print_entry(e).c_str());
 		std::pair<const char*, int> section = e.data_section();
 		TORRENT_ASSERT(std::memcmp(b, section.first, section.second) == 0);
 		TORRENT_ASSERT(section.second == sizeof(b) - 1);
